--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "to-do-list",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/' --exec 'ts-node src/app.ts' -e ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Pdhenrique/MoneyMine.git"
-  },
+  "keywords": [],
   "author": "Pedro Santana",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Pdhenrique/MoneyMine/issues"
-  },
-  "homepage": "https://github.com/Pdhenrique/MoneyMine#readme",
   "devDependencies": {
-    "@types/express": "^4.17.20",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.11.6",
+    "prisma": "^5.8.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^3.12.10",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^5.8.1",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/multipart": "^7.7.3",
+    "fastify": "^4.23.2"
   }
 }
